# cratery

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  README.docker.md  README.md  azure-pipeline.yml  build-deploy.sh  build-docker.sh  build-env.sh  build-publish.sh  build-src.sh  build.rs  build.sh  cmd  db-gen.sh  deny.toml  docker-compose.yml  prepare.sh  taplo.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
.sqlx/: query-009c06787339f2890715e6b4f2fb9d29fba4504f30b6045f8385bb9baf5797fc.json  query-00b04dcd06ca94b654bf4103fb6cda28dd6511a5683ad1c07a8d35c7038d7b72.json  query-039e892b9d19cbceed5d3e153613a219a08965adc9dc574203144b222841ad09.json  query-04efc69c08a73228b6d8a3f8e8462d392a01659d7400665f12c5238a395d1771.json  query-09d9ff543452fc8d713e573bbb941000f315134bdfde189988d3121dd470e544.json  query-0b7a61253d1ae4f9238041d81ff5aa6f218fa4dead3f506c9a4ede14e10248b3.json  query-0c4a9fc1c579deb5383be4f4b22733daa283ce8a370cb3664e5e1ac052860d45.json  query-11b4ffa2408ab2321eaa04038ef91d5af781f833b9386bb53b1c4309d79d832c.json  query-127af2fb332207a37a377117d4c98187b7fd4484a97c15fa73ea013beb5ecf89.json  query-12fecb81297647b8e7736d9fe0babe93b7001d16a7e77e8f15f8ebce3efc3389.json  query-151b4fdb0f5b13fa3bfe800680ecb06d4e4eb9952d68db0fe5a803e34e428750.json  query-1809658f299accd1508f8b0e135c1373d8d4c7cc00cc68369301da21483068ff.json  query-19c929c364d1565357849dcaca3e01455590a276dc328bcc50dacc17f105c700.json  query-1a56d9cdcfc118eb3d31969355475322c95421d1195765ba7a2490e446bc6e2d.json  query-1bc5177acd22a1c9a17022cf01d894e544bde053787d014c5d965bc816122931.json  query-1fbdfcf4426cfeb5209fcab4068e64c9f935e7303645150a19fb52455ed9debe.json  query-223fbe9e0faf8b32f7a8064c9e648d8081dcd65b3f28daf7f74c506acdf95af4.json  query-2277fb211ad3d9b07575b363f7a0e425e4947f0ce03270a20b3a9261e8e69354.json  query-25a11eaa79fc9d2bdc652dd2ce211a7ab0d84881a4cdd2af9491ff2197a696d0.json  query-28361078cd57279d18ef35c9b616af5ab8797647bd226ba0959f37c55dcf3c41.json  query-28d16f3decb0be591e92d1bb326fe6f9bf2708f1e3d691d20da1e96674f74347.json  query-2b109254e8cff7e8cc3e308e7d4905e8566899a211259106d84b4c206594afdc.json  query-2b9ac703cd0cb1de2693770592184f8922ed0a33cafc445524ae7254295badac.json  query-2f19b6981522cd14267b016d171c8b7b2f2e0d3e7e0a8cb3c41d7b9155bbecbf.json  query-2fe927c0b71f736abdc1236051c726ae2e0f81156183c026788f5e381e69ba62.json  query-308b534191433ac9f4815dd4a3f5bdc12de3e301fc51881e9bb5d2b5e41a6893.json  query-30b5434e5f60065914d79f77ebd9c4c9bc09f2c5715b01ef67bbd38c1b096269.json  query-33e3a805c6e2bdfcba06ce881489e1b836f87e01af621d021e371c01759c3bb0.json  query-33f4917075aa208e638b04db719431096533afc0e66749dc0a275d4019cba9e2.json  query-34a6d0b0449bcbc1900a8b15608d597c087683c531e1f811e0881ad8ef7d037e.json  query-34a7508e8e91889a21fc80d2db34f63715b071d3195efde89c2f7728cee09e2f.json  query-3602dde24fb9472d46c3d08176090ffd8f34c9ec0a5f4ff0c4b13e076aa84d3e.json  query-369946b01e8ab9aa2321fb97111cbd38094900852735241db5705bec1770480f.json  query-3df0a8bc40999444dd48a6eee73036ccf4d1d574aa67c7db7180671fd9a0b96a.json  query-3e12456072333848871f5f3596f25c2e2ddcf08bb20fdd8a28e2094926e3a54a.json  query-4032533cfc47a325b8332e55b086bfc5ada89ad5e43a44b9b9a82d6931ea5b7f.json  query-4095ed6e6c8c884650d3f2a0b5c592b32cdc3fed4a4c9b7bb4586e1a37057ee2.json  query-416d7277895859c59eb394345f4e50d816a77285fae5c86f728bb6313fa7ccfe.json  query-4341429c41f57b6e8fc09b3699f19f46fba79914add8adcd6d5edbab48874fd1.json  query-443d6e44baee6c3e1706d2a9e939af5dc52a519ca56a008b015834f3c4923f02.json  (+111 more)
src/: application.rs  docs.rs  empty.db  index.rs  jobs.rs  main.rs  objects.rs  routes.rs  schema.sql  storage.rs  transaction.rs  worker.rs
src/api/: mod.rs  namegen.rs  packages.rs  users.rs
src/app/: mod.rs  packages.rs  users.rs
src/migrations/: mod.rs  v1.1.0.sql  v1.10.0.sql  v1.11.0.sql  v1.2.0.sql  v1.3.0.sql  v1.4.0.sql  v1.5.0.sql  v1.6.0.sql  v1.7.0.sql  v1.7.1.sql  v1.8.0.sql  v1.9.0.sql
src/model/: auth.rs  cargo.rs  config.rs  deps.rs  dlstats.rs  docs.rs  errors.rs  mod.rs  namegen.rs  objects.rs  osv.rs  packages.rs  semver.rs  stats.rs  worker.rs
src/services/: deps.rs  docs.rs  emails.rs  index.rs  mod.rs  rustsec.rs  storage.rs
src/services/database/: admin.rs  jobs.rs  mod.rs  packages.rs  stats.rs  users.rs
src/services/index/: git.rs  mod.rs
src/services/storage/: fs.rs  mod.rs  s3.rs
src/storage/: fs.rs  mod.rs  s3.rs
src/tests/: mocks.rs  mod.rs  security.rs
src/utils/: apierror.rs  concurrent.rs  db.rs  hashes.rs  mod.rs  shared.rs  sigterm.rs  token.rs
src/utils/axum/: auth.rs  db.rs  embedded.rs  extractors.rs  mod.rs  sse.rs
src/utils/s3/: mod.rs  signing.rs
src/webapp/: account.html  admin-jobs-docgen.html  admin-tokens.html  admin-users.html  admin-workers.html  admin.html  api.js  crate.html  index-outdated.html  index.css  index.html  index.js  mod.rs  oauthcallback.html  stream.js
tools/: regen-missing-docs.py
