[package]
name = "cratery"
version = "1.12.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Cratery -- a private cargo registry"
repository = "https://github.com/cenotelie/cratery"
homepage = "https://github.com/cenotelie/cratery"
documentation = "https://github.com/cenotelie/cratery"
license = "MIT"
edition = "2024"

[dependencies]
# logging
log = "0.4"
fern = "0.7"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# basic dependencies
base64 = "0.22"
byteorder = "1.4"
bytes = "1.7"
chrono = { version = "0.4.38", features = ["serde"] }
cookie = { version = "0.18", features = ["secure", "percent-encode"] }
data-encoding = "2.1"
flate2 ="1.0"
http-body = "1"
mime = "0.3"
opendal = { version = "0.53", features = ["services-fs", "services-s3"] }
quick-xml = "0.37"
rand = "0.8"
ring = "0.17"
semver = { version = "1.0", features = ["serde"] }
urlencoding = "2.1"
tar = "0.4.41"
uuid =  { version = "1.2", features = ["v4", "fast-rng"] }

# async support
futures = "0.3"
tokio = { version = "1.38", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = {version = "0.7", features = ["io"]}

# framework for the application
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "tokio1", "tokio1-rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
axum = { version = "0.8", features = ["http2", "ws"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "rustls-tls-native-roots"] }
tokio-tungstenite = "0.26"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"

[lints.clippy]
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# The individually activated lints below come from : nursery, pedantic, restriction or suspicious.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
or_fun_call = "deny"
uninlined_format_args = "deny"
