[package]
name = "cratery"
version = "1.13.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
edition = "2024"
description = "Cratery -- a private cargo registry"
documentation = "https://github.com/cenotelie/cratery"
homepage = "https://github.com/cenotelie/cratery"
repository = "https://github.com/cenotelie/cratery"
license = "MIT"
keywords = ["cargo", "crates", "private", "registry", "service"]
categories = ["development-tools"]

[dependencies]
# logging
fern = "0.7"
log = "0.4"

# serde
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# basic dependencies
base64 = "0.22"
byteorder = "1.5"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
cookie = { version = "0.18", features = ["percent-encode", "secure"] }
data-encoding = "2.10"
flate2 = "1.1"
http-body = "1"
opendal = { version = "0.55", features = ["services-fs", "services-s3"] }
rand = "0.9"
ring = "0.17"
semver = { version = "1.0", features = ["serde"] }
tar = "0.4"
urlencoding = "2.1"
uuid = { version = "1.19", features = ["fast-rng", "v4"] }

# async support
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# framework for the application
axum = { version = "0.8", features = ["http2", "ws"] }
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "rustls-tls",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "form",
    "rustls",
    "stream",
] }
sqlx = { version = "0.8", default-features = false, features = [
    "chrono",
    "macros",
    "runtime-tokio-rustls",
    "sqlite",
] }
tokio-tungstenite = "0.28"

[lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
# The individually activated lints below come from : nursery, restriction.
future_not_send = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
or_fun_call = "deny"
string_lit_as_bytes = "warn"
